change write skills.

--- a/src/config/detail.yml
+++ b/src/config/detail.yml
@@ -1,8 +1,8 @@
-- name: SkillFromJob
-  desc: Java/PHP[FuelPHP]
+- name: 業務で得たスキル
+  desc: Java/PHP[FuelPHP]/VB.Net/VB6
 
-- name: WhileStudying
-  desc: Haskell/Common Lisp/JavaScript[React/Redux/Next]/Go
+- name: 最近学んでる言語・フレームワーク等
+  desc: Clojure/JavaScript[React/Redux/Next]/Go/Haskell/Common Lisp
 
 - name: 一言
   desc: 技術を学ぶことが趣味であり生きがいです。
