upgraded and added scrapbox.

--- a/src/config/detail.yml
+++ b/src/config/detail.yml
@@ -2,7 +2,7 @@
   desc: Java/PHP[FuelPHP]/VB.Net/VB6
 
 - name: 最近学んでる言語・フレームワーク等
-  desc: Clojure/JavaScript[React/Redux/Next]/Go/Haskell/Common Lisp
+  desc: JavaScript[React/Redux/Next]/Vue.js/Go/Haskell/Common Lisp
 
 - name: 一言
   desc: 技術を学ぶことが趣味であり生きがいです。
