--- a/src/config/socialAccounts.yml
+++ b/src/config/socialAccounts.yml
@@ -13,3 +13,7 @@
 - name: Blog
   label: 基本的に怠惰iary
   href: https://londone.net
+
+- name: scrapbox
+  label: 読書メモ置き場
+  href: https://scrapbox.io/burden-reading/
